# fedsched

./: .gitignore  .release-please-manifest.json  README.md  release-please-config.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1-bug-report.yaml  2-feature-request.yaml
.github/workflows/: release-please.yml
crates/fedsched/: CHANGELOG.md  Cargo.toml  askama.toml
crates/fedsched-cli/: CHANGELOG.md  Cargo.toml
crates/fedsched-cli/src/: main.rs
crates/fedsched/src/: config.rs  error.rs  lib.rs  surql_templates.rs
crates/fedsched/src/graphql/: context.rs  mod.rs  schema.rs
crates/fedsched/surql/: utils.surql
crates/fedsched/surql/_templates/: define_field.surql  define_insert_handler.surql  event_selection_by_daterange.surql
crates/fedsched/surql/static/: event_selection_by_daterange.surql
web/: CHANGELOG.md  elm.json  index.html
web/src/: Main.elm
