[package]
name = "fedsched"
version = "1.0.0"
edition = "2024"

[dependencies]
askama = "0.15.4"
async-graphql = "7.0.19"
async-graphql-axum = "7.1.0"
axum = "0.8.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
surrealdb = { version = "2.6.0", features = ["kv-mem"] }
thiserror = "2.0.18"
tower-http = "0.6.8"
tracing = "0.1.44"
